Sync with current main branch
Co-authored-by: laeubi <1331477+laeubi@users.noreply.github.com>